--- a/inlam2_1.0/inlam2_1.0.csproj
+++ b/inlam2_1.0/inlam2_1.0.csproj
@@ -64,6 +64,12 @@
     <Compile Include="AddNewCustomer.Designer.cs">
       <DependentUpon>AddNewCustomer.cs</DependentUpon>
     </Compile>
+    <Compile Include="BookARoomForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="BookARoomForm.Designer.cs">
+      <DependentUpon>BookARoomForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Customer.cs">
       <DependentUpon>HotelModel.tt</DependentUpon>
     </Compile>
@@ -113,6 +119,9 @@
     </Compile>
     <EmbeddedResource Include="AddNewCustomer.resx">
       <DependentUpon>AddNewCustomer.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="BookARoomForm.resx">
+      <DependentUpon>BookARoomForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="MainMenuForm.resx">
       <DependentUpon>MainMenuForm.cs</DependentUpon>
