update: delete customer works

--- a/inlam2_1.0/inlam2_1.0.csproj
+++ b/inlam2_1.0/inlam2_1.0.csproj
@@ -73,6 +73,7 @@
     <Compile Include="Customer.cs">
       <DependentUpon>HotelModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="CustomerDBmanager.cs" />
     <Compile Include="MainMenuForm.cs">
       <SubType>Form</SubType>
     </Compile>
