--- a/inlam2_1.0/inlam2_1.0.csproj
+++ b/inlam2_1.0/inlam2_1.0.csproj
@@ -73,7 +73,13 @@
     <Compile Include="Customer.cs">
       <DependentUpon>HotelModel.tt</DependentUpon>
     </Compile>
-    <Compile Include="CustomerDBmanager.cs" />
+    <Compile Include="DBmanager.cs" />
+    <Compile Include="HandleCustomerForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="HandleCustomerForm.Designer.cs">
+      <DependentUpon>HandleCustomerForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="MainMenuForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -118,11 +124,20 @@
     <Compile Include="ShowCustomerInformation.Designer.cs">
       <DependentUpon>ShowCustomerInformation.cs</DependentUpon>
     </Compile>
+    <Compile Include="UpdateCustomers.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UpdateCustomers.Designer.cs">
+      <DependentUpon>UpdateCustomers.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="AddNewCustomer.resx">
       <DependentUpon>AddNewCustomer.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="BookARoomForm.resx">
       <DependentUpon>BookARoomForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="HandleCustomerForm.resx">
+      <DependentUpon>HandleCustomerForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="MainMenuForm.resx">
       <DependentUpon>MainMenuForm.cs</DependentUpon>
@@ -138,6 +153,9 @@
     </Compile>
     <EmbeddedResource Include="ShowCustomerInformation.resx">
       <DependentUpon>ShowCustomerInformation.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UpdateCustomers.resx">
+      <DependentUpon>UpdateCustomers.cs</DependentUpon>
     </EmbeddedResource>
     <EntityDeploy Include="HotelModel.edmx">
       <Generator>EntityModelCodeGenerator</Generator>
